--- a/index.html
+++ b/index.html
@@ -108,12 +108,15 @@
           <ul class="work list">
             <li class="work-item">
                 <img lang="ru" src="./images/box1.jpg" alt="разработка програмного обеспечения" width="370" />
+                <p class="work-item-text title">Десктопные приложения</p>
             </li>
             <li class="work-item">
-                <img lang="ru" src="./images/box2.jpg" alt="работа с мобильным приложением" width="370" /> 
+                <img lang="ru" src="./images/box2.jpg" alt="работа с мобильным приложением" width="370" />
+                <p class="work-item-text title">Мобильные приложения</p>
             </li>
             <li class="work-item">
                 <img lang="ru" src="./images/box3.jpg" alt="подготовка палитры цветов" width="370" />
+                <p class="work-item-text title">Дизайнерские решения</p>
             </li>        
           </ul>  
         </div>        
