--- a/portfolio.html
+++ b/portfolio.html
@@ -65,11 +65,15 @@
                 <ul class="projects-list list">
                     
                     <li class="projects-item">
+                      <div class="project-cover-wrap">
                       <img src="./images/project1.jpg" alt="технокряк веб сайт" width="370">
+                      <p class="project-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                      исчерпывающие сведения о компании или частном лице.</p>
+                      </div>
                       <div class="card-content">
                       <h2 class="projects-title title">Технокряк</h2>
                       <p class="projects-text">Веб-сайт</p>
-                      </div>                       
+                      </div>
                      </li>
                                         
                     <li class="projects-item">
