--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          <section class="hero">
             <div class="container">
               <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-              <button class="hero-button" type="button">Заказать услугу</button>  
+              <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>  
             </div>              
         </section>   
  
@@ -387,6 +387,16 @@
           </div>
         </div> 
         
-    </footer>   
+    </footer>  
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close" data-modal-close>
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div> 
+    <script src="./js/modal.js"></script>
 </body>
 </html>
