--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       <div class="modal">
         <button class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
-            <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-Vector"></use>
           </svg>
         </button>
       </div>
