--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2 class="features-title centered" hidden>Методы работы</h2>
             <ul class="features list">
                 <li class="features-item">
-                    <h3 class="features title">Внимание к деталям</h3>
+                    <h3 class="features title effect">Внимание к деталям</h3>
                     <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>                    
                 </li>
                 <li class="features-item">
