--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>    
     <!-- Шапка страницы -->
- <header class="header page-header">
+ <header class="header">
    <!-- The logo is always a link -->  
     <div class="container main-nav">   
           <a class="logo" lang="en" href="./index.html">        
@@ -22,20 +22,20 @@
     
       <nav class="nav">      
         <ul class="site-nav list">
-           <li class="site-nav item"><a class="site-nav-link current" href="./index.html">Студия</a></li>
-           <li class="site-nav item"><a class="site-nav-link" href="./portfolio.html">Портфолио</a></li>
-           <li class="site-nav item"><a class="site-nav-link" href="">Контакты</a></li>
+           <li class="site-nav-item"><a class="site-nav-link current" href="./index.html">Студия</a></li>
+           <li class="site-nav-item"><a class="site-nav-link" href="./portfolio.html">Портфолио</a></li>
+           <li class="site-nav-item"><a class="site-nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
         <ul class="auth-nav list">                       
-          <li class="auth-nav item">       
+          <li class="auth-nav-item">       
             <a class="auth-nav-link" href="mailto:info@devstudio.com">
               <svg class="auth-nav-icon" width="16" height="12">
                 <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
               </svg>              
               info@devstudio.com</a>
           </li>          
-          <li class="auth-nav item">
+          <li class="auth-nav-item">
             <a class="auth-nav-link" href="tel:+380961111111">
               <svg class="auth-nav-icon" width="10" height="16">
                 <use href="./images/icons/symbol-defs.svg#icon-phone"></use>
