--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,7 @@
     <!-- Шапка страницы -->
    
 <header class="header">
-  <div class="page-header">
-    <!-- The logo is always a link -->
+     <!-- The logo is always a link -->
     <div class="container main-nav">
           <a class="logo" lang="en" href="./index.html" >
           <span class="logo-part">Web</span>Studio
@@ -24,27 +23,26 @@
     
        <nav class="nav">    
             <ul class="site-nav list">
-                 <li class="site-nav item"><a class="site-nav-link" href="./index.html">Студия</a></li>
-                 <li class="site-nav item"><a class="site-nav-link current" href="./portfolio.html">Портфолио</a></li>
-                 <li class="site-nav item"><a class="site-nav-link" href="">Контакты</a></li>
+                 <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Студия</a></li>
+                 <li class="site-nav-item"><a class="site-nav-link current" href="./portfolio.html">Портфолио</a></li>
+                 <li class="site-nav-item"><a class="site-nav-link" href="">Контакты</a></li>
             </ul>
         </nav>
              <ul class="auth-nav list">
-                 <li class="auth-nav item">
+                 <li class="auth-nav-item">
                    <a class="auth-nav-link" href="mailto:info@devstudio.com">
                     <svg class="auth-nav-icon" width="16" height="12">
                       <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
                     </svg>
                     info@devstudio.com</a></li>
-                 <li class="auth-nav item">
+                 <li class="auth-nav-item">
                    <a class="auth-nav-link" href="tel:+380961111111">
                     <svg class="auth-nav-icon" width="10" height="16">
                       <use href="./images/icons/symbol-defs.svg#icon-phone"></use>
                     </svg>
                     +38 096 111 11 11</a></li>
              </ul> 
-    </div> 
-  </div>     
+    </div>   
 </header>
 
 <!-- Уникальный контент страницы -->
